--- a/packages/admin/src/styles/parts/fileInput.css
+++ b/packages/admin/src/styles/parts/fileInput.css
@@ -1,8 +1,5 @@
 :where(.fileInput) {
-	width: 100%;
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(8.125em, 1fr));
-	grid-gap: 0.625em;
+	grid-gap: var(--cui-double-gap);
 }
 
 :where(.fileInput-preview) {
@@ -23,24 +20,9 @@
 	align-items: center;
 }
 
-:where(.fileInput-dropZone:last-child:nth-child(1)) {
-	grid-column: 1/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(2)) {
-	grid-column: 2/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(3)) {
-	grid-column: 3/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(4)) {
-	grid-column: 4/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(5)) {
-	grid-column: 5/-1;
+:where(.fileInput-dropZone) {
+	grid-column-start: var(--fileInput-column-start, 1);
+	grid-column-end: -1;
 }
 
 :where(.fileInput-cta) {
