--- a/packages/layout/src/kit/Frame.css
+++ b/packages/layout/src/kit/Frame.css
@@ -1,7 +1,6 @@
 :where(.cui-layout-frame) {
 	background-color: rgb(var(--cui-background-color--rgb-0));
-	max-height: 100vh;
-	max-height: 100dvh;
+	height: 100%;
 	max-width: 100vw;
 	max-width: 100dvw;
 	overflow: hidden;
@@ -16,13 +15,10 @@
 }
 
 :where(.cui-layout-frame-container) {
-	background-color: rgb(var(--cui-background-color--rgb-0));;
+	background-color: rgb(var(--cui-background-color--rgb-0));
 }
 
-:where(
-	.cui-layout-frame-header,
-	.cui-layout-frame-footer,
-) {
+:where(.cui-layout-frame-header, .cui-layout-frame-footer) {
 	display: flex;
 	flex-direction: column;
 	gap: var(--cui-padding);
@@ -35,7 +31,7 @@
 
 :where(
 	.cui-layout-frame[data-header-is-fixed] .cui-layout-frame-header,
-	.cui-layout-frame[data-footer-is-fixed] .cui-layout-frame-footer,
+	.cui-layout-frame[data-footer-is-fixed] .cui-layout-frame-footer
 ) {
 	position: fixed;
 }
