--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -1,25 +1,7 @@
-:where(html),
-:where(body) {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	min-height: 100dvh;
-	min-width: 100vw;
-	min-width: 100dvw;
+:where(html, body) {
 	margin: 0;
-	overscroll-behavior: none;
 	padding: 0;
-}
-
-:where(html) {
-	display: flex;
-	min-height: 100vh;
-	min-height: 100dvh;
-	-webkit-text-size-adjust: 100%;
-}
-
-:where(body) {
-	flex: 1 1 100%;
+	height: 100%;
 }
 
 :where(body > div) {
